--- a/Simple_Web_Server_Rust/Cargo.toml
+++ b/Simple_Web_Server_Rust/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 serde = "1.0.160"
+postgres = "0.14"
+diesel = {version = "2.0.4", features =[ "postgres"] }
+dotenvy = "0.15.7"
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
